// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > should apply the correct styles, HTMLAttributes, and allow a ref 1`] = `
<form
  name="form"
/>
`;

exports[`Form > should apply the correct styles, HTMLAttributes, and allow a ref 2`] = `
<form
  class="custom-class-name"
  name="form"
  style="color: white;"
/>
`;
